src/objects/Financial_Account_Customer__c.object
<CustomObject>
    <fields>
        <fullName>Mailing_State_Garage__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing state for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
TEXT(Mailing_State_BillTo__c),
TEXT(Mailing_State_Garage__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street1__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing street first line for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c)
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) = 0, Mailing_Street_BillTo__c, LEFT(Mailing_Street_BillTo__c, FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) - 1))
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) = 0, Mailing_Street_Garage__c, LEFT(Mailing_Street_Garage__c, FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) - 1))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street2__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing second street line for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c)
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c) = 0, &quot;&quot;, RIGHT(Mailing_Street_BillTo__c, LEN(Mailing_Street_BillTo__c) - FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_BillTo__c)))
,
IF(FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c) = 0, &quot;&quot;, RIGHT(Mailing_Street_Garage__c, LEN(Mailing_Street_Garage__c) - FIND(SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;), Mailing_Street_Garage__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Street2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_BillTo__c</fullName>
        <description>State</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Street_Garage__c</fullName>
        <description>Street</description>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to determine the appropriate mailing zip code for a customer based on whether the account is a retail or lease and if it&apos;s a lease, whether the alternate billing address information is used.</description>
        <formula>IF(Financial_Account__r.RecordType.Name = &quot;Lease&quot; &amp;&amp; !ISBLANK(Mailing_City_BillTo__c), 
Mailing_PostalCode_BillTo__c &amp; IF(!ISBLANK(Billing_Zip_Code_Extn__c), &quot;-&quot; &amp; Billing_Zip_Code_Extn__c, &quot;&quot;) 
, 
Mailing_Postal_Code_Garage__c &amp; IF(!ISBLANK(Garage_Zip_Code_Extn__c), &quot;-&quot; &amp; Garage_Zip_Code_Extn__c, &quot;&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Make__c</formula>
        <label>(IVR) Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <description>Marketing Email Address</description>
        <label>Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_No_Call_Reason_Code__c</fullName>
        <label>Mobile Phone No-Call Reason Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_No_Call_Reason__c</fullName>
        <formula>CASE(Mobile_Phone_No_Call_Reason_Code__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Mobile #&quot;,
&quot;S&quot;, &quot;S - Mobile # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Mobile #&quot;,
&quot;B&quot;, &quot;B - Mobile number with No Consent&quot;, 
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile Number</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Model_Name__c</formula>
        <label>(IVR) Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Model_Year__c</formula>
        <label>(IVR) Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_FAC__c</fullName>
        <formula>Financial_Account__r.Number_of_FAC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of FAC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last1__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last1__c</formula>
        <label>(IVR) Payment Amount Last1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last2__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last2__c</formula>
        <label>(IVR) Payment Amount Last2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Last3__c</fullName>
        <formula>Financial_Account__r.Payment_Amount_Last3__c</formula>
        <label>(IVR) Payment Amount Last3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last1__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last1__c</formula>
        <label>(IVR) Payment Date Last1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last2__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last2__c</formula>
        <label>(IVR) Payment Date Last2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Date_Last3__c</fullName>
        <formula>Financial_Account__r.Payment_Date_Last3__c</formula>
        <label>(IVR) Payment Date Last3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Privacy_Elec_Affiliate_Marketing_Source__c</fullName>
        <label>Affiliate Marketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_3rd_Party_Sharing_Source__c</fullName>
        <description>Third Party Sharing Source Flag</description>
        <label>Privacy Elect 3rd Party Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Elect_Affiliate_Sharing_Source__c</fullName>
        <description>Affiliate Sharing Source Flag</description>
        <label>Privacy Elect Affiliate Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Marketing__c</fullName>
        <description>Affiliate Marketing Flag</description>
        <label>Affiliate Marketing</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Affiliate_Sharing__c</fullName>
        <description>Affiliate Sharing Flag</description>
        <label>Affiliate Sharing</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_DealershipSource__c</fullName>
        <description>Dealer Privacy Source Flag</description>
        <label>Privacy Election DealershipSource</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Dealership__c</fullName>
        <description>Dealer Privacy Flag</description>
        <label>Toyota/Lexus Dealer</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing_Source__c</fullName>
        <description>FCRA Sharing Source Flag</description>
        <label>Privacy Election FCRA Sharing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_FCRA_Sharing__c</fullName>
        <description>FCRA Sharing Flag</description>
        <label>Credit App/Rpt</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing_Source__c</fullName>
        <description>Telemarketing Source Flag</description>
        <label>Privacy Election Telemarketing Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Telemarketing__c</fullName>
        <description>Telemarketing Flag</description>
        <label>TFS Telemarketing</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Privacy_Election_Third_Party_Sharing__c</fullName>
        <description>Third Party Sharing Flag</description>
        <label>3rd Party</label>
        <picklist>
            <picklistValues>
                <fullName>OUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RL_Bankruptcy_Status__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Used in the Rights Letters process. When the Financial Account is in an active or discharged bankruptcy status, this indicates the individual borrower&apos;s BK status, where it may be the same or different from the account&apos;s.</description>
        <inlineHelpText>Used in the Rights Letters process. When the Financial Account is in an active or discharged bankruptcy status, this indicates the individual borrower&apos;s BK status, where it may be the same or different from the account&apos;s.</inlineHelpText>
        <label>Bankruptcy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Filing Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Filing Party</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RL_Customer_Type__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to interpret the borrower type, primary vs. co-, and provide that information to the Adobe Forms Service with a value in the format specified, i.e. Customer vs. CoCustomer.</description>
        <formula>CASE(Borrower_Position__c,
&quot;Primary&quot;,&quot;Customer&quot;,
&quot;Co-X&quot;,&quot;CoCustomer&quot;,
&quot;CoCustomer&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RL_IsCustomerNotLiableForDeficiencyBuyer__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to evaluate whether the financial account is in an active or discharged status and whether the current customer is a filing party. If both are true, then the customer is not liable for the deficiency and a true flag must be sent to the Adobe Forms Service for this customer&apos;s copy of the rights letter.</description>
        <formula>IF(
(Financial_Account__r.Bankruptcy_Flag__c = &quot;A&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;B&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;C&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;D&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;T&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;E&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;F&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;H&quot; || Financial_Account__r.Bankruptcy_Flag__c = &quot;G&quot;)

&amp;&amp;

ISPICKVAL(RL_Bankruptcy_Status__c, &quot;Filing Party&quot;),

True,

False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RL_IsCustomerNotLiableForDeficiencyBuyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reentrant_Trigger_Executed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in validation rules to fail (skip) the validation rule when it is being evaluated due to trigger execution - example is a field gets changed by a user and then an after update trigger changes the same value in a called function, setting this value in the initial trigger update and then unsetting it in the called function will cause an applicable validation rule to fail, i.e. not process</description>
        <label>Reentrant Trigger Executed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResultsHome_Phone_Delivery_Garage__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>ResultsHome Phone Delivery Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Home_Phone_Delivery_BillTo__c</fullName>
        <description>Home Phone Number Delivery Results</description>
        <label>Results Home Phone Delivery BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_BillTo__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results Work Phone Delivery BillTo</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Results_Work_Phone_Delivery_Garage__c</fullName>
        <description>Work Phone Number Delivery Results</description>
        <label>Results Work Phone Delivery Garage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Email__c</fullName>
        <description>Account Servicing Email Address</description>
        <label>Servicing Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shell_Case_ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ContactId used to relate to Shell Cases or cases for users who have not logged into the system, and do not yet have a weblogin ContactId</description>
        <label>Shell Case ContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Customers (Shell Case ContactId)</relationshipLabel>
        <relationshipName>Financial_Account_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <formula>Account__r.Social_Security_Number__pc</formula>
        <label>(IVR) Social Security Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Identification_Number__c</fullName>
        <formula>Account__r.Tax_Identification_Number__c</formula>
        <label>(IVR) Tax Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Customer_Id__c</fullName>
        <label>Universal Customer Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Source__c</fullName>
        <description>Source of Update</description>
        <label>Update Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number_Last_8_Ch__c</fullName>
        <formula>TRIM(RIGHT(Financial_Account__r.Collateral__r.Vehicle_Identification_Number__c, 8))</formula>
        <label>(IVR) Vehicle Identification Num Last8Ch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Identification_Number__c</fullName>
        <formula>Financial_Account__r.Collateral__r.Vehicle_Identification_Number__c</formula>
        <label>(IVR) Vehicle Identification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_to_Customer__c</fullName>
        <description>If the parent Financial Account&apos;s Code Edit Message contains the listed values then the record should be hidden from the Community User.</description>
        <formula>AND(
    NOT(OR(
       Financial_Account__r.Code_Edit_Message__c = &apos;1301I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1309I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1312I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1313I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1317I&apos;,
       Financial_Account__r.Code_Edit_Message__c = &apos;1318I&apos;
    )),
    ISBLANK(Financial_Account__r.Archive_Flag__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visible to Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weblogin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Weblogin Contact stores the contact id of the weblogin register to this FinAcctCustomer Record.
Null if no Weblogin Contact is register.

Customer Community will allow weblogin customer to read this record</description>
        <label>Weblogin Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Account Customers</relationshipLabel>
        <relationshipName>Financial_Account_Customers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Bill_To__c</fullName>
        <description>Work Phone Number</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Garage__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Phone_NoCall_Reason_Code_Garage__c</fullName>
        <label>Work Phone NoCall Reason Code Garage</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_BillTo__c</fullName>
        <formula>CASE(Work_Phone_No_Call_Reason_Code_Bill_To__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Work #&quot;,
&quot;S&quot;, &quot;S - Work # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Work #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Work # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;A&quot;, &quot;A - Home # matches the Work #&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_Code_Bill_To__c</fullName>
        <label>Work Phone No Call Reason Code Bill To</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Phone_No_Call_Reason_Garage__c</fullName>
        <formula>CASE(Work_Phone_NoCall_Reason_Code_Garage__c,
&quot;D&quot;, &quot;D - DNC indicator checked for Work #&quot;,
&quot;S&quot;, &quot;S - Work # matches another number on the account that is marked DNC&quot;,
&quot;X&quot;, &quot;X - Invalid indicator checked for Work #&quot;,
&quot;B&quot;, &quot;B - Mobile indicator checked for the Work # and abbreviated/overall consent is “No”&quot;,
&quot;C&quot;, &quot;C - No indicators or restrictions&quot;,
&quot;A&quot;, &quot;A - Home # matches the Work #&quot;,
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone No-Call Reason</label>
        <type>Text</type>
    </fields>
    <label>Financial Account Customer</label>
    <listViews>
        <fullName>Borrower_Position</fullName>
        <columns>NAME</columns>
        <columns>Financial_Account__c</columns>
        <columns>Customer_Role_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Borrower Position</label>
    </listViews>
    <nameField>
        <label>Financial Account Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Account Customers</pluralLabel>
    <recordTypes>
        <fullName>Lease</fullName>
        <active>true</active>
        <description>Lease type of account</description>
        <label>Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Home_BillTo</fullName>
        <active>true</active>
        <description>Checks home billing phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(HomePhone_BillTo__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(HomePhone_BillTo__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(HomePhone_BillTo__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Home_Phone_Acknowledged_BillTo__c)
)</errorConditionFormula>
        <errorDisplayField>HomePhone_BillTo__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Home Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Home_Garage</fullName>
        <active>true</active>
        <description>Checks home garage phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Home_Phone_Garage__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Home_Phone_Garage__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Home_Phone_Garage__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Home_Phone_Acknowledged_Garage__c)
)</errorConditionFormula>
        <errorDisplayField>Home_Phone_Garage__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Home Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Mobile</fullName>
        <active>true</active>
        <description>Checks mobile phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Mobile_Phone__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Mobile_Phone__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Mobile_Phone__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Mobile_Phone_Acknowledged__c)
)</errorConditionFormula>
        <errorDisplayField>Mobile_Phone__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Mobile Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Work_BillTo</fullName>
        <active>true</active>
        <description>Checks work billing phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Work_Phone_Bill_To__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Work_Phone_Bill_To__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Work_Phone_Bill_To__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Work_Phone_Acknowledged_BillTo__c)
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Bill_To__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Work Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Area_Code_Must_Be_Valid_Work_Garage</fullName>
        <active>true</active>
        <description>Checks work garage phone number for invalid area codes</description>
        <errorConditionFormula>AND(
 NOT(Reentrant_Trigger_Executed__c),
 ISCHANGED(Work_Phone_Garage__c),
 NOT($Setup.Validation_Bypass__c.Phone_Number_Validations__c),
 NOT(ISBLANK(Work_Phone_Garage__c)),
 CONTAINS(
  $Label.Invalid_Area_Codes, 
  LEFT(
   SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Work_Phone_Garage__c,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),
   3
  )
 ),
 NOT(Invalid_Work_Phone_Acknowledged_Garage__c)
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Garage__c</errorDisplayField>
        <errorMessage>The phone number you&apos;ve entered contains an invalid area code. Please confirm with customer.  If confirmed with customer, check the Work Phone Format Confirmed checkbox and save to continue.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Addr_Spec_Inst_Format</fullName>
        <active>true</active>
        <description>Cannot exceed 25 char for Lease and 36 char for Retail.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Address_Special_BillTo__c),
  OR(
    LEN(Address_Special_BillTo__c) &gt; 25 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Lease&quot;,
    LEN(Address_Special_BillTo__c) &gt; 36 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Retail&quot;
)
)</errorConditionFormula>
        <errorDisplayField>Address_Special_BillTo__c</errorDisplayField>
        <errorMessage>Care of/special instructions cannot exceed 25 characters in length for leases or 36 characters for loans</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Home_Phone_DNC_Invalid</fullName>
        <active>true</active>
        <description>Both DNC and Invalid flags cannot be set, it should be just 1 of these 2.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  OR(
    ISCHANGED(Flag_Home_Phone_DNC_BillTo__c),
    ISCHANGED(Flag_Home_Phone_Invalid_BillTo__c)
  ),
  Flag_Home_Phone_DNC_BillTo__c &amp;&amp; Flag_Home_Phone_Invalid_BillTo__c
)</errorConditionFormula>
        <errorDisplayField>Flag_Home_Phone_Invalid_BillTo__c</errorDisplayField>
        <errorMessage>DNC and Invalid flags cannot be set at the same time - deselect one of them</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Home_Phone_Format</fullName>
        <active>true</active>
        <description>The new phone number should be numerical and should not exceed 10 digits.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(HomePhone_BillTo__c),
  NOT(REGEX(HomePhone_BillTo__c, &quot;\\([0-9]{3}\\)\\s[0-9]{3}\\-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>HomePhone_BillTo__c</errorDisplayField>
        <errorMessage>Phone numbers entered must be in valid 10 digit phone formats only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bill_To_Street_Format</fullName>
        <active>true</active>
        <description>Cannot exceed 25 char for Lease and 36 char for Retail.</description>
        <errorConditionFormula>AND(
  NOT($Profile.Name=&quot;System Administrator&quot;||$Profile.Name=&quot;API Only&quot;||$Profile.Name=&quot;System Administrator Clone&quot;),
  NOT(Reentrant_Trigger_Executed__c),
  ISCHANGED(Mailing_Street_BillTo__c),
  OR(
    LEN(Mailing_Street_BillTo__c) &gt; 25 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Lease&quot;,
    LEN(Mailing_Street_BillTo__c) &gt; 36 &amp;&amp;  Financial_Account__r.RecordType.Name = &quot;Retail&quot;
)
)</errorConditionFormula>
        <errorDisplayField>Mailing_Street_BillTo__c</errorDisplayField>
        <errorMessage>Street addresses cannot exceed 25 characters in length for leases or 36 characters for loans</errorMessage>
    </validationRules>
</CustomObject>